--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    <button>Click me</button>
+    <button>Click me!</button>
     <div class="circle"></div>
     <div class="circle"></div>
     <div class="circle"></div>
