--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <button>Click me!</button>
+    <h2>Hello</h2>
     <div class="circle"></div>
     <div class="circle"></div>
     <div class="circle"></div>
